# picked_group_fdr

./: .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG  Dockerfile  Makefile  MakefileFigures  MakefileShared  PickedGroupFDR.spec  README.md  conda_environment.yml  config.py  gui.py  import_lxml.py  pyproject.toml  setup.py
.github/workflows/: auto_release.yml  coverage.yml  gui_build.yml  publish_release.yml
admin/: cython_hints.md  get_download_stats.sh  release_checklist.txt
data/book_chapter/: ReadMe.md  coon_analysis.ipynb  run_picked_group_fdr.sh  update_evidence.sh
data/diann_example/: ReadMe.md  run_picked_group_fdr.sh
data/fragpipe_example/: ReadMe.md  filelist_ionquant.txt  iprg2016_with_labels.fasta  modmasses_ionquant.txt  run_ionquant.sh  run_picked_group_fdr.sh
data/lfq_example/: config.json  db.fasta
data/ms2rescore_example/: ReadMe.md  run_ms2rescore.sh  run_picked_group_fdr.sh
data/protein_inference_example/: ReadMe.md  peptide_info_list.tsv  protein_inference_and_fdr.ipynb
data/sage_example/: ReadMe.md  config.json  run_picked_group_fdr.sh
docs/: release_checklist.md  requirements.txt
docs/source/: cite.rst  conf.py  index.rst  installation.rst  manuscript.rst  usage.rst
gui_tools/: add_lib.py  build_gui.bat  create_gui_zip.py
picked_group_fdr/: __init__.py  __main__.py  competition.py  digest.py  digestfast.cpp  digestfast.html  digestfast.pyx  digestion_params.py  entrapment.py  fdr.py  graphs.py  grouping.py  helpers.py  methods.py  observed_peptides.py  parsers.py  peptide_info.py  peptide_protein_map.py  picked_group_fdr.py  plotter.py  precursor_quant.py  protein_annotation.py  protein_groups.py  proteotypicity.py  quantification.py  results.py  score_origin.py  scoring.py  scoring_strategy.py  setup.py
picked_group_fdr/columns/: __init__.py  base.py  diann_protein_annotations.py  evidence_ids.py  fastlfq.py  fragpipe_protein_annotations.py  id_type.py  indistinguishable_proteins.py  lfq.py  modifications.py  peptide_count.py  protein_annotations.py  protein_probability.py  sequence_coverage.py  spectral_count.py  sum_and_ibaq.py  tmt.py  top_peptide.py  triqler.py
picked_group_fdr/methods/: classic_no_grouping.toml  classic_no_grouping_no_remap.toml  classic_protein_group.toml  classic_rescued_subset_grouping.toml  classic_subset_grouping.toml  diann.toml  discard_picked.toml  discard_picked_mq_input.toml  fragpipe.toml  maxquant.toml  maxquant_mq_best.toml  maxquant_mq_best_picked.toml  maxquant_perc_best.toml  maxquant_perc_best_picked.toml  maxquant_picked.toml  picked_protein_group.toml  picked_protein_group_mq_input.toml  picked_protein_group_mq_input_no_remap.toml  picked_protein_group_mq_mult.toml  picked_protein_group_no_remap.toml  razor_picked.toml  razor_picked_mq_input.toml  sage.toml  savitski.toml  savitski_classic.toml  savitski_mq_best.toml  savitski_mq_mult.toml  savitski_no_remap.toml
picked_group_fdr/parsers/: diann.py  evidence.py  fragpipe.py  maxquant.py  modifications.py  parsers.py  percolator.py  protein_groups.py  psm.py  sage.py  tsv.py
picked_group_fdr/pipeline/: __init__.py  add_ibaq_columns.py  analyze_missing_peptides.py  andromeda2pin.py  create_peptides_txt.py  entrapment_fdr.py  filter_fdr_maxquant.py  merge_pout.py  (+5 more)
(+93 files in other folders)
