[tool.poetry]
name = "picked_group_fdr"
version = "0.1.0"
description = "Scalable, accurate and sensitive protein group FDRs for large-scale mass spectrometry experiments"
authors = ["Matthew The <matthew.the@tum.de>"]
license= "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kusterlab/picked_group_fdr"
repository = "https://github.com/kusterlab/picked_group_fdr"
keywords = ["mass spectrometry", "protein inference", "proteomics"]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6.9"
numpy = "^1.18"
networkx = "^2.4"
matplotlib = "^3.3.1"
triqler = "^0.4.0"
cython = "^0.29.21"
llvmlite = "0.31.0"
mokapot = "^0.3"
dataclasses = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
