[tool.poetry]
name = "picked_group_fdr"
version = "0.5.0"
description = "Scalable, accurate and sensitive protein group FDRs for large-scale mass spectrometry experiments"
authors = ["Matthew The <matthew.the@tum.de>"]
license= "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kusterlab/picked_group_fdr"
repository = "https://github.com/kusterlab/picked_group_fdr"
keywords = ["mass spectrometry", "protein inference", "proteomics"]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.18"
scipy = "^1.9"
networkx = "^2.4"
matplotlib = "^3.3.1"
triqler = ">=0.4.0"
cython = ">=0.29.21"
llvmlite = "^0.39.1"
mokapot = ">=0.3"
Bottleneck = "^1.3.5"
toml = "^0.10.2"
pyqt5 = {version = "^5.15.7", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
ipykernel = "^6.26.0"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
gui = ["pyqt5"]
