[tool.poetry]
name = "picked_group_fdr"
version = "0.8.2"
description = "Scalable, accurate and sensitive protein group FDRs for large-scale mass spectrometry experiments"
authors = ["Matthew The <matthew.the@tum.de>"]
license= "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kusterlab/picked_group_fdr"
repository = "https://github.com/kusterlab/picked_group_fdr"
keywords = ["mass spectrometry", "protein inference", "proteomics"]
include = [
  "LICENSE",
]
packages = [
    {include = "picked_group_fdr"},
    {include = "tests", format = "sdist"},
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.18"
scipy = "^1.9"
networkx = "^2.4"
matplotlib = "^3.3.1"
triqler = ">=0.7.0"
cython = ">=0.29.21"
mokapot = ">=0.3"
Bottleneck = "^1.3.5"
toml = "^0.10.2"
pyqt5 = {version = "^5.15.7", optional = true}
job-pool = ">=0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^4.0.0"
ipykernel = "^6.26.0"
memory-profiler = "^0.61.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
gui = ["pyqt5"]

[tool.coverage.run]
omit = [
  "picked_group_fdr/pipeline/*", 
  "picked_group_fdr/plotter.py", 
  "*/__init__.py",
  "*/__main__.py",
  "*/setup.py"
]